Revise README with team info and test case details
Updated README.md to include team details, test cases, and JUnit examples.